--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>SEO &amp; Hosting</div>
               </a>
             </div>
           </div>
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </a>
           </div>
           <div class="div-block-1475">
-            <a href="pricing" class="desktop-menubar-button w-inline-block">
+            <a href="pricing" class="joinbeta-button mob w-inline-block">
               <div class="desktop-menubar-button-text">Join Beta</div>
             </a>
           </div>
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -150,7 +150,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
-      <div class="div-block-1473"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70">
+      <div class="div-block-1473">
+        <a href="index" aria-current="page" class="link-block w-inline-block w--current"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -168,7 +169,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>Hosting &amp; SEO</div>
               </a>
             </div>
           </div>
@@ -199,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -219,7 +220,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="div-block-1332">
         <div class="hero-text">
           <h1 class="hero-header landing">For the Next Generation of Publishers.</h1>
-          <div class="hero-paragraph">Storipress brings content and design teams together. Meet the best publishing platform ever.</div>
+          <div class="hero-paragraph">Whether its a personal blog or a 100-writer publishing group, Storipress brings content, design and editorial teams together. Discover the best publishing platform ever.</div>
           <div class="div-block">
             <a href="#Footer-CTA" class="joint-beta-button w-button">Join Beta</a>
           </div>
@@ -261,7 +262,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <div class="div-block-1435">
               <h3 class="heading-17">Individualised Permissions</h3>
-              <div class="text-block-55">Articles are organised into ‘newsdesks’ or content categories, with their own individualised permissions.</div>
+              <div class="text-block-55">Articles are organised into content ‘desks’ with their own individualised permissions.</div>
             </div>
           </div>
         </div>
@@ -276,7 +277,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-1434">
             <h2 class="heading-19">Write</h2>
             <h3 class="heading-18">
-              <a href="create" class="landing-feature-link title-description">Collaborative, visual editing:</a> the editor you&#x27;ve dreamt about.
+              <a href="create" class="landing-feature-link title-description">Collaborative, visual editing:</a> the editor you&#x27;ve dreamt about in your publishing platform.
             </h3>
           </div>
           <div data-w-id="349a5e96-11eb-05f8-88dc-51ee09185b5e" style="opacity:0" class="div-block-1432"><img src="images/NSW-Gov.svg" loading="lazy" alt="NSW Government Logo" class="image-59">
@@ -294,11 +295,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-1436">
             <div class="div-block-1435">
               <h3 class="heading-17">Collaborative Editing</h3>
-              <div class="text-block-55">The only CMS with <a href="create" class="landing-feature-link">collaborative editing</a> built in.</div>
+              <div class="text-block-55">
+                <a href="#" class="landing-feature-link">Collaborative editing</a> built in — a first for a blogging platform.
+              </div>
             </div>
             <div class="div-block-1435">
               <h3 class="heading-17">Insert Anything</h3>
-              <div class="text-block-55">Markdown, HTML, YouTube bookmark cards, &amp; more</div>
+              <div class="text-block-55">Markdown, HTML, YouTube bookmark cards, &amp; more.</div>
             </div>
             <div class="div-block-1435">
               <h3 class="heading-17">Tools for Editors</h3>
@@ -318,7 +321,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1431">
           <div class="div-block-1434">
             <h2 class="heading-19">Build</h2>
-            <h3 class="heading-18">Turn your writing into a brand. The only site builder designed for publications.</h3>
+            <h3 class="heading-18">Turn your blog into a brand. The only site builder designed for publications.</h3>
           </div>
           <div data-w-id="76ae0894-e981-518c-103b-b48f745db5a3" style="opacity:0" class="div-block-1432"><img src="images/The-Studio.svg" loading="lazy" alt="The Studio Logo" class="image-59">
             <div class="text-block-54">“WordPress eat your heart out! Storipress integrates beautiful editorial &amp; turnkey distribution with workflow &amp; monetisation tools tailor-made for both publishers &amp; bloggers.”<br></div>
@@ -342,7 +345,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="div-block-1435">
               <h3 class="heading-17">Ultimate Performance</h3>
               <div class="text-block-55">
-                <a href="build" class="landing-feature-link">Optimised for SEO</a>, Storipress&#x27;  publications load <a href="build" class="landing-feature-link">50% faster than the NY Times.</a>
+                <a href="build" class="landing-feature-link">Optimised for SEO</a>, publications on Storipress load <a href="build" class="landing-feature-link">50% faster than the NY Times.</a>
               </div>
             </div>
             <div class="div-block-1435">
@@ -361,7 +364,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1431">
           <div class="div-block-1434">
             <h2 class="heading-19">Grow</h2>
-            <h3 class="heading-18">Engagement, supercharged. Ad revenue, maximised.</h3>
+            <h3 class="heading-18">A platform for growth. Supercharge engagement. Maximise ad revenue.</h3>
           </div>
           <div data-w-id="efc0a1b9-9ce0-c088-9228-3f79444db841" style="opacity:0" class="div-block-1432"><img src="images/Crikey.svg" loading="lazy" alt="Crikey Logo" class="image-59">
             <div class="text-block-54">&quot;The innovation brought by Storipress fosters the energy and spirit needed in the world of publishing.&quot;<br></div>
@@ -476,7 +479,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a href="engage" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="hosting" class="footer-text">Hosting &amp; Performance</a>
+                <a href="hosting" class="footer-text">Hosting &amp; SEO</a>
               </li>
               <li>
                 <a href="pricing" class="footer-text">Pricing</a>
