--- a/manage.html
+++ b/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0efd274a405eb701b00" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>SEO &amp; Hosting</div>
               </a>
             </div>
           </div>
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </a>
           </div>
           <div class="div-block-1475">
-            <a href="pricing" class="desktop-menubar-button w-inline-block">
+            <a href="pricing" class="joinbeta-button mob w-inline-block">
               <div class="desktop-menubar-button-text">Join Beta</div>
             </a>
           </div>
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -150,7 +150,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
-      <div class="div-block-1473"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70">
+      <div class="div-block-1473">
+        <a href="index" class="link-block w-inline-block"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -168,7 +169,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>Hosting &amp; SEO</div>
               </a>
             </div>
           </div>
@@ -199,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -351,7 +352,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <a href="hosting" class="other-features-parent w-inline-block">
           <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
           <div class="div-block-1400">
-            <h4 class="heading-11">Hosting</h4>
+            <h4 class="heading-11">Hosting &amp; SEO</h4>
             <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
           </div>
         </a>
@@ -415,7 +416,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a href="engage" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="hosting" class="footer-text">Hosting &amp; Performance</a>
+                <a href="hosting" class="footer-text">Hosting &amp; SEO</a>
               </li>
               <li>
                 <a href="pricing" class="footer-text">Pricing</a>
