--- a/vs/medium.html
+++ b/vs/medium.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7acec2435056b1a826505b" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="../hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>SEO &amp; Hosting</div>
               </a>
             </div>
           </div>
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </a>
           </div>
           <div class="div-block-1475">
-            <a href="../pricing" class="desktop-menubar-button w-inline-block">
+            <a href="../pricing" class="joinbeta-button mob w-inline-block">
               <div class="desktop-menubar-button-text">Join Beta</div>
             </a>
           </div>
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -155,19 +155,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1428">
           <h1 class="heading-16">Storipress vs Medium</h1>
           <div class="text-block-48">Build your brand and own your content. Switch to Storipress today.</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="comparison-feature">
-    <div class="feature-bounding-box comparison _1">
-      <div class="div-block-1445"><img src="../images/Migration.svg" loading="lazy" alt="" class="image-65">
-        <h2 class="heading-21">Make the switch to Storipress in minutes using our import function.</h2>
-        <div class="text-block-58">Regularly publish on Medium? Don&#x27;t worry about losing any content when you migrate to Storipress.<br><br>Easily migrate your content to Storipress by importing your content as single JSON file. It&#x27;s time to experience a better publishing experience.</div>
-      </div>
-      <div class="div-block-1445"><img src="../images/Smiley.svg" loading="lazy" alt="" class="image-65">
-        <h2 class="heading-21">5x cheaper than a comparable WordPress deployment.</h2>
-        <div class="text-block-58">Storipress is around half the price of a comparable WordPress deployment, starting at $6.90/month or $69/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a>
         </div>
       </div>
     </div>
@@ -273,6 +260,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div class="photo-bg-colour comparision-cta"></div>
   </div>
+  <div class="comparison-feature">
+    <div class="feature-bounding-box comparison _1">
+      <div class="div-block-1445"><img src="../images/Migration.svg" loading="lazy" alt="" class="image-65">
+        <h2 class="heading-21">Switch to Storipress in minutes.</h2>
+        <div class="text-block-58">Regularly publish on Medium? Don&#x27;t worry about losing any content when you migrate to Storipress.<br><br>Easily migrate your content to Storipress by importing your content as single JSON file. It&#x27;s time to experience a better publishing experience.</div>
+      </div>
+      <div class="div-block-1445"><img src="../images/Smiley.svg" loading="lazy" alt="" class="image-65">
+        <h2 class="heading-21">5x cheaper than a WordPress deployment.</h2>
+        <div class="text-block-58">Storipress is more than half the price of a comparable WordPress deployment, starting at $6.90/month or $69/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="feature-section">
     <div class="feature-bounding-box other-features-1">
       <h2 class="heading-10">More comparisons</h2>
@@ -296,7 +296,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
-      <div class="div-block-1473"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70">
+      <div class="div-block-1473">
+        <a href="../index" class="link-block w-inline-block"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="../images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -314,7 +315,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="../hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>Hosting &amp; SEO</div>
               </a>
             </div>
           </div>
@@ -345,7 +346,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -408,7 +409,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a href="../engage" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="../hosting" class="footer-text">Hosting &amp; Performance</a>
+                <a href="../hosting" class="footer-text">Hosting &amp; SEO</a>
               </li>
               <li>
                 <a href="../pricing" class="footer-text">Pricing</a>
