--- a/create.html
+++ b/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd11de72a337ecd56808c" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>SEO &amp; Hosting</div>
               </a>
             </div>
           </div>
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </a>
           </div>
           <div class="div-block-1475">
-            <a href="pricing" class="desktop-menubar-button w-inline-block">
+            <a href="pricing" class="joinbeta-button mob w-inline-block">
               <div class="desktop-menubar-button-text">Join Beta</div>
             </a>
           </div>
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -150,7 +150,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
-      <div class="div-block-1473"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70">
+      <div class="div-block-1473">
+        <a href="index" class="link-block w-inline-block"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -168,7 +169,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>Hosting &amp; SEO</div>
               </a>
             </div>
           </div>
@@ -199,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -317,12 +318,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="text-block-38">Editors can approve articles for publication right from the editor, marking them as having passed your quality control checks. Only articles marked for publication will be published on their scheduled day.<br></div>
         </div>
         <div class="editor-editors-walkthrough-text-parent-copy _4">
-          <div class="feature-photo-crop editor-permissions"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="435" sizes="(max-width: 479px) 86vw, (max-width: 767px) 90vw, 100vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="header-mobile-photo _8"></div>
+          <div class="feature-photo-crop editor-permissions"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, 100vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="header-mobile-photo _8"></div>
           <h3 class="heading-7 editor">Missing alt-text indicators</h3>
           <div class="text-block-38">For SEO best practice, alt-text needs to be applied to images. Albion visually shows you which images don&#x27;t have alt text so you never forget to add alt-text to images again.<span class="emphasise"></span></div>
         </div>
       </div>
-      <div class="div-block-1386 editor-features"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="474" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="editor-editors-photos _3"><img src="images/Meta-Controls.png" loading="lazy" width="504" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/Meta-Controls-p-500.png 500w, images/Meta-Controls-p-800.png 800w, images/Meta-Controls.png 1008w" alt="Jraft&#x27;s article management functionality in the editor" class="editor-editors-photos _2"><img src="images/1-Comments.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/1-Comments-p-500.png 500w, images/1-Comments-p-800.png 800w, images/1-Comments-p-1080.png 1080w, images/1-Comments.png 1206w" alt="Leaving editor comments in the editor for draft articles" class="editor-editors-photos _1">
+      <div class="div-block-1386 editor-features"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="474" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="editor-editors-photos _3"><img src="images/Meta-Controls.png" loading="lazy" width="504" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Meta-Controls-p-500.png 500w, images/Meta-Controls-p-800.png 800w, images/Meta-Controls.png 1008w" alt="Jraft&#x27;s article management functionality in the editor" class="editor-editors-photos _2"><img src="images/1-Comments.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/1-Comments-p-500.png 500w, images/1-Comments-p-800.png 800w, images/1-Comments-p-1080.png 1080w, images/1-Comments.png 1206w" alt="Leaving editor comments in the editor for draft articles" class="editor-editors-photos _1">
         <div class="photo-bg-colour editor-3"></div>
       </div>
     </div>
@@ -401,7 +402,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h2 class="heading-10">All features</h2>
       <div class="div-block-1397">
         <a href="manage" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/workflow.svg" loading="lazy" alt=""></div>
+          <div class="other-image-parent"><img src="images/Workflow.svg" loading="lazy" alt=""></div>
           <div class="div-block-1400">
             <h4 class="heading-11">Workflow</h4>
             <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
@@ -424,7 +425,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <a href="hosting" class="other-features-parent w-inline-block">
           <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
           <div class="div-block-1400">
-            <h4 class="heading-11">Hosting</h4>
+            <h4 class="heading-11">Hosting &amp; SEO</h4>
             <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
           </div>
         </a>
@@ -488,7 +489,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a href="engage" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="hosting" class="footer-text">Hosting &amp; Performance</a>
+                <a href="hosting" class="footer-text">Hosting &amp; SEO</a>
               </li>
               <li>
                 <a href="pricing" class="footer-text">Pricing</a>
