--- a/hosting.html
+++ b/hosting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0308edc68c3868b89a7" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="hosting" aria-current="page" class="navbar-tooltip-link w-inline-block w--current">
-                <div>Hosting and Performance</div>
+                <div>SEO &amp; Hosting</div>
               </a>
             </div>
           </div>
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </a>
           </div>
           <div class="div-block-1475">
-            <a href="pricing" class="desktop-menubar-button w-inline-block">
+            <a href="pricing" class="joinbeta-button mob w-inline-block">
               <div class="desktop-menubar-button-text">Join Beta</div>
             </a>
           </div>
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -150,7 +150,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
-      <div class="div-block-1473"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70">
+      <div class="div-block-1473">
+        <a href="index" class="link-block w-inline-block"><img src="images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -168,7 +169,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="hosting" aria-current="page" class="navbar-tooltip-link w-inline-block w--current">
-                <div>Hosting and Performance</div>
+                <div>Hosting &amp; SEO</div>
               </a>
             </div>
           </div>
@@ -199,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -218,7 +219,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="feature-bounding-box">
       <div class="feature-hero-text-parent hosting">
         <h1 class="feat-hero-text _1">Lightning fast, ultra reliable hosting. <span class="emphasise title">Without the headaches.</span></h1>
-        <div class="text-block-31">Enjoy the fastest, most scalable hosting technology for your publication — without all the hassles of domain setup, FTP, cPanel, and other annoying acronyms.</div>
+        <div class="text-block-31">Great SEO requires a fast site. Enjoy the fastest, most scalable hosting for your publication — without all the hassles of domain setup, FTP, cPanel, and other annoying acronyms.</div>
         <div class="div-block-1372">
           <a href="#Footer-CTA" class="joint-beta-button w-button">Join Beta</a>
         </div>
@@ -412,7 +413,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h2 class="heading-10">All features</h2>
       <div class="div-block-1397">
         <a href="manage" class="other-features-parent w-inline-block">
-          <div class="other-image-parent"><img src="images/workflow.svg" loading="lazy" alt=""></div>
+          <div class="other-image-parent"><img src="images/Workflow.svg" loading="lazy" alt=""></div>
           <div class="div-block-1400">
             <h4 class="heading-11">Workflow</h4>
             <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
@@ -506,7 +507,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a href="engage" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="hosting" aria-current="page" class="footer-text w--current">Hosting &amp; Performance</a>
+                <a href="hosting" aria-current="page" class="footer-text w--current">Hosting &amp; SEO</a>
               </li>
               <li>
                 <a href="pricing" class="footer-text">Pricing</a>
