--- a/legal/terms.html
+++ b/legal/terms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f86f18cbace9b00a3202046" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="../hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>SEO &amp; Hosting</div>
               </a>
             </div>
           </div>
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </a>
           </div>
           <div class="div-block-1475">
-            <a href="../pricing" class="desktop-menubar-button w-inline-block">
+            <a href="../pricing" class="joinbeta-button mob w-inline-block">
               <div class="desktop-menubar-button-text">Join Beta</div>
             </a>
           </div>
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#" class="desktop-menubar-button w-inline-block">
+        <a href="#" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -345,7 +345,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a href="../engage" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="../hosting" class="footer-text">Hosting &amp; Performance</a>
+                <a href="../hosting" class="footer-text">Hosting &amp; SEO</a>
               </li>
               <li>
                 <a href="../pricing" class="footer-text">Pricing</a>
