--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Apr 30 2021 12:26:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f730f6fbd37202a4a0633fc" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
   <title>A better, smarter WordPress alternative | Storipress</title>
-  <meta content="The serious publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." name="description">
+  <meta content="The publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." name="description">
   <meta content="A better, smarter WordPress alternative | Storipress" property="og:title">
-  <meta content="The serious publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." property="og:description">
+  <meta content="The publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="og:image">
   <meta content="A better, smarter WordPress alternative | Storipress" property="twitter:title">
-  <meta content="The serious publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." property="twitter:description">
+  <meta content="The publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1615895902/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="../hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>SEO &amp; Hosting</div>
               </a>
             </div>
           </div>
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </a>
           </div>
           <div class="div-block-1475">
-            <a href="../pricing" class="desktop-menubar-button w-inline-block">
+            <a href="../pricing" class="joinbeta-button mob w-inline-block">
               <div class="desktop-menubar-button-text">Join Beta</div>
             </a>
           </div>
@@ -124,7 +124,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477 mainmenu">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -154,20 +154,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="hero-other-wrapper">
         <div class="div-block-1428">
           <h1 class="heading-16">Storipress vs WordPress</h1>
-          <div class="text-block-48">Comparing Storipress and WordPress is like comparing Notepad to Google Docs. Storipress combines powerful collaboration features with a visual website builder so you can work with your whole team on a centralised platform.</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="comparison-feature">
-    <div class="feature-bounding-box comparison _1">
-      <div class="div-block-1445"><img src="../images/Migration.svg" loading="lazy" alt="" class="image-65">
-        <h2 class="heading-21">Make the switch to Storipress in minutes using our WordPress plugin</h2>
-        <div class="text-block-58">Have a publication on WordPress with thousands of posts? Don&#x27;t worry about losing any content when you migrate to Storipress.<br><br>Easily migrate your content to Storipress using our native WordPress migration plugin. It&#x27;s time to experience a better publishing experience.</div>
-      </div>
-      <div class="div-block-1445"><img src="../images/Smiley.svg" loading="lazy" alt="" class="image-65">
-        <h2 class="heading-21">5x cheaper than a comparable WordPress deployment.</h2>
-        <div class="text-block-58">Storipress is around half the price of a comparable WordPress deployment, starting at $6.90/month or $69/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a>
+          <div class="text-block-48">Storipress is the WordPress alternative publishers have been needing. With a pure focus on enterprise publishing, Storipress offers unparalleled simplicity and affordability without compromising on the features power users need.</div>
         </div>
       </div>
     </div>
@@ -211,7 +198,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-1446 comparision-rows">
             <div class="div-block-1449"><img src="../images/WordPress.svg" loading="lazy" alt="WordPress Logo" class="image-67 wordpress"></div>
             <div class="emoticon red">(╯°□°)╯︵ ┻━┻</div>
-            <div class="text-block-59">Unless you&#x27;re a coder, you&#x27;ll need a visual design plugin or a template, both of which are more suited towards e-commerce sites.</div>
+            <div class="text-block-59">Unless you&#x27;re a coder, WordPress needs a visual design plugin or a template, both of which are more suited towards e-commerce sites.</div>
           </div>
         </div>
       </div>
@@ -245,7 +232,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-1446 comparision-rows">
             <div class="div-block-1449"><img src="../images/WordPress.svg" loading="lazy" alt="WordPress Logo" class="image-67 wordpress"></div>
             <div class="emoticon green">｡◕ ‿ ◕｡</div>
-            <div class="text-block-59">Easily customizable—as long as you&#x27;re using a plugin. And if you know how to configure it.</div>
+            <div class="text-block-59">Sure, WordPress is really customizable—as long as you&#x27;re using plugins. And if you know how to configure it.</div>
           </div>
         </div>
       </div>
@@ -279,7 +266,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-1446 comparision-rows">
             <div class="div-block-1449"><img src="../images/WordPress.svg" loading="lazy" alt="WordPress Logo" class="image-67 wordpress"></div>
             <div class="emoticon red">¯\_(ツ)_/¯</div>
-            <div class="text-block-59">Also offers free SSL, but WP sites are known for their security vulnerabilities when not properly maintained.</div>
+            <div class="text-block-59">Also offers free SSL, but WordPress sites are known for their security vulnerabilities when not properly maintained.</div>
           </div>
         </div>
       </div>
@@ -296,8 +283,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-1446 comparision-rows">
             <div class="div-block-1449"><img src="../images/WordPress.svg" loading="lazy" alt="WordPress Logo" class="image-67 wordpress"></div>
             <div class="emoticon red">¯\_(ツ)_/¯</div>
-            <div class="text-block-59">Mostly community driven, so it can take a long time to get help.</div>
+            <div class="text-block-59">Support on WordPress is mostly community driven, so it can take a long time to get help.</div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="comparison-feature">
+    <div class="feature-bounding-box comparison _1">
+      <div class="div-block-1445"><img src="../images/Migration.svg" loading="lazy" alt="" class="image-65">
+        <h2 class="heading-21">Make the switch to Storipress in minutes</h2>
+        <div class="text-block-58">Have a publication on WordPress with thousands of posts? Don&#x27;t worry about losing any content when you migrate to Storipress.<br><br>Easily migrate your content to Storipress using our native WordPress migration plugin. It&#x27;s time to experience a better publishing experience.</div>
+      </div>
+      <div class="div-block-1445"><img src="../images/Smiley.svg" loading="lazy" alt="" class="image-65">
+        <h2 class="heading-21">5x cheaper than a WordPress deployment.</h2>
+        <div class="text-block-58">Storipress more than half the price of a comparable WordPress deployment, starting at $6.90/month or $69/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a>
         </div>
       </div>
     </div>
@@ -347,7 +347,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div href="#Footer-CTA" data-w-id="ff63298b-f0f3-2ccd-9bf0-c9b0f04e1b31" class="float-nav">
     <div class="floatingnav-bg">
-      <div class="div-block-1473"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70">
+      <div class="div-block-1473">
+        <a href="../index" class="link-block w-inline-block"><img src="../images/SP-Logo-BLACK.svg" loading="lazy" alt="" class="image-70"></a>
         <div class="navlinks">
           <div>Features</div><img src="../images/Chevron.svg" loading="lazy" alt="" class="image-71">
           <div data-w-id="2e9362a0-8b2b-1875-14e1-d318d8275659" class="tooltip-trigger navbar feat">
@@ -365,7 +366,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div>Engagement + Revenue</div>
               </a>
               <a href="../hosting" class="navbar-tooltip-link w-inline-block">
-                <div>Hosting and Performance</div>
+                <div>Hosting &amp; SEO</div>
               </a>
             </div>
           </div>
@@ -396,7 +397,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1477">
         <a href="https://app.storipress.com/dash/auth/sign-in/" class="sign-in">Sign in</a>
-        <a href="#Footer-CTA" class="desktop-menubar-button w-inline-block">
+        <a href="#Footer-CTA" class="joinbeta-button w-inline-block">
           <div class="desktop-menubar-button-text">Join Beta</div>
         </a>
       </div>
@@ -459,7 +460,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a href="../engage" class="footer-text">Engage &amp; Earn</a>
               </li>
               <li>
-                <a href="../hosting" class="footer-text">Hosting &amp; Performance</a>
+                <a href="../hosting" class="footer-text">Hosting &amp; SEO</a>
               </li>
               <li>
                 <a href="../pricing" class="footer-text">Pricing</a>
