--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 01 2021 13:57:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -219,7 +219,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="div-block-1331">
       <div class="div-block-1332">
         <div class="hero-text">
-          <h1 class="hero-header landing">For the Next Generation of Publishers.</h1>
+          <h1 data-w-id="ea610f1a-9a49-d23f-9509-d2c14c0eab22" style="filter:hue-rotate(0deg) brightness(125%)" class="hero-header landing">For the Next Generation of Publishers.</h1>
           <div class="hero-paragraph">Whether its a personal blog or a 100-writer publishing group, Storipress brings content, design and editorial teams together. Discover the best publishing platform ever.</div>
           <div class="div-block">
             <a href="#Footer-CTA" class="joint-beta-button w-button">Join Beta</a>
