fixed mobile menu

--- a/vs/wix.html
+++ b/vs/wix.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 01 2021 12:40:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun May 02 2021 06:22:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7ace6a19656db585edef80" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -105,7 +105,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../hosting" class="link-7">Hosting + Performance</a>
             </div>
             <div class="div-block-1474">
-              <div class="text-block-70">Features</div>
+              <div class="text-block-70">Why Storipress</div>
               <a href="../vs/wordpress" class="link-7">Storipress vs WordPress</a>
               <a href="../vs/wix" aria-current="page" class="link-7 w--current">Storipress vs Wix, Squarespace</a>
               <a href="../vs/medium" class="link-7">Storipress vs Medium</a>
@@ -272,28 +272,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
   </div>
-  <div class="signup-form-2">
-    <div class="signup-cta-bounding-box">
-      <h2 class="heading-23">Get access before everyone else</h2>
-      <div class="text-block-60">Sign up to our beta and experience the modern way to publish.</div>
-      <div class="form-block w-form">
-        <form id="email-form-2" name="email-form-2" data-name="Email Form 2" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="form">
-          <div class="div-block-1448">
-            <div class="compare-form-parent"><input type="text" class="text-field w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First name" id="FNAME" required=""></div>
-            <div class="compare-form-parent"><input type="text" class="text-field w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last name" id="LNAME" required=""></div>
-            <div class="compare-form-parent"><input type="email" class="text-field w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email Address" id="EMAIL-2" required=""></div>
-          </div><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="submit-button w-button">
-        </form>
-        <div class="w-form-done">
-          <div>Thank you! Your submission has been received!</div>
-        </div>
-        <div class="w-form-fail">
-          <div>Oops! Something went wrong while submitting the form.</div>
-        </div>
-      </div>
-    </div>
-    <div class="photo-bg-colour comparision-cta"></div>
-  </div>
   <div class="comparison-feature">
     <div class="feature-bounding-box comparison _1">
       <div class="div-block-1445"><img src="../images/Migration.svg" loading="lazy" alt="" class="image-65">
@@ -306,6 +284,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
       </div>
     </div>
+  </div>
+  <div class="signup-form-2">
+    <div class="signup-cta-bounding-box">
+      <h2 class="heading-23">Get access before everyone else</h2>
+      <div class="text-block-60">Sign up to our beta and experience the modern way to publish.</div>
+      <div class="form-block w-form">
+        <form id="email-form-2" name="email-form-2" data-name="Email Form 2" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="form">
+          <div class="div-block-1448">
+            <div class="compare-form-parent name"><input type="text" class="text-field w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First name" id="FNAME" required=""></div>
+            <div class="compare-form-parent name"><input type="text" class="text-field w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last name" id="LNAME" required=""></div>
+            <div class="compare-form-parent email"><input type="email" class="text-field w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email Address" id="EMAIL-2" required=""></div>
+          </div><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="submit-button w-button">
+        </form>
+        <div class="w-form-done">
+          <div>Thank you! Your submission has been received!</div>
+        </div>
+        <div class="w-form-fail">
+          <div>Oops! Something went wrong while submitting the form.</div>
+        </div>
+      </div>
+    </div>
+    <div class="photo-bg-colour comparision-cta"></div>
   </div>
   <div class="feature-section">
     <div class="feature-bounding-box other-features-1">
