--- a/pricing.html
+++ b/pricing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 02 2021 06:22:18 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
+<!--  Last Published: Sun May 02 2021 07:00:37 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="608e4c511590b18b61765294" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Plans &amp; Pricing | Storipress</title>
@@ -105,7 +105,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="hosting" class="link-7">Hosting + Performance</a>
             </div>
             <div class="div-block-1474">
-              <div class="text-block-70">Why Storipress</div>
+              <div class="text-block-70">Features</div>
               <a href="vs/wordpress" class="link-7">Storipress vs WordPress</a>
               <a href="vs/wix" class="link-7">Storipress vs Wix, Squarespace</a>
               <a href="vs/medium" class="link-7">Storipress vs Medium</a>
@@ -217,7 +217,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="comparison-hero pricing">
     <div class="div-block-1416">
-      <div class="image-wrapper pricing"><img src="images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 767px) 100vw, (max-width: 991px) 859.796875px, 87vw" srcset="images/Editor-Comp-p-500.png 500w, images/Editor-Comp-p-800.png 800w, images/Editor-Comp-p-1080.png 1080w, images/Editor-Comp-p-1600.png 1600w, images/Editor-Comp-p-2000.png 2000w, images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
+      <div class="image-wrapper pricing"><img src="images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 767px) 100vw, (max-width: 991px) 40vw, 41vw" srcset="images/Editor-Comp-p-500.png 500w, images/Editor-Comp-p-800.png 800w, images/Editor-Comp-p-1080.png 1080w, images/Editor-Comp-p-1600.png 1600w, images/Editor-Comp-p-2000.png 2000w, images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
       <div class="hero-other-wrapper">
         <div class="div-block-1428 pricing">
           <h1 class="heading-16">An innovative pricing model</h1>
