--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 02 2021 06:22:18 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
+<!--  Last Published: Sun May 02 2021 07:00:37 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="608e4c511590b1abd77652e4" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
   <title>What WordPress really costs you | Storipress</title>
@@ -105,7 +105,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../hosting" class="link-7">Hosting + Performance</a>
             </div>
             <div class="div-block-1474">
-              <div class="text-block-70">Why Storipress</div>
+              <div class="text-block-70">Features</div>
               <a href="../vs/wordpress" class="link-7">Storipress vs WordPress</a>
               <a href="../vs/wix" class="link-7">Storipress vs Wix, Squarespace</a>
               <a href="../vs/medium" class="link-7">Storipress vs Medium</a>
