--- a/vs/wix.html
+++ b/vs/wix.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 02 2021 06:22:18 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f7ace6a19656db585edef80" data-wf-site="5f475d95bc662b718071304a" lang="en">
+<!--  Last Published: Sun May 02 2021 07:00:37 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="608e4c511590b19a7a7652e6" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Storipress vs. Wix: Experience content management that doesn&#x27;t suck</title>
@@ -105,7 +105,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="../hosting" class="link-7">Hosting + Performance</a>
             </div>
             <div class="div-block-1474">
-              <div class="text-block-70">Why Storipress</div>
+              <div class="text-block-70">Features</div>
               <a href="../vs/wordpress" class="link-7">Storipress vs WordPress</a>
               <a href="../vs/wix" aria-current="page" class="link-7 w--current">Storipress vs Wix, Squarespace</a>
               <a href="../vs/medium" class="link-7">Storipress vs Medium</a>
