features → why SP

--- a/manage.html
+++ b/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 02 2021 07:00:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun May 02 2021 07:14:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b1cdc776528f" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -105,7 +105,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="hosting" class="link-7">Hosting + Performance</a>
             </div>
             <div class="div-block-1474">
-              <div class="text-block-70">Features</div>
+              <div class="text-block-70">Why Storipress</div>
               <a href="vs/wordpress" class="link-7">Storipress vs WordPress</a>
               <a href="vs/wix" class="link-7">Storipress vs Wix, Squarespace</a>
               <a href="vs/medium" class="link-7">Storipress vs Medium</a>
